--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -235,7 +235,26 @@
         .form-input::placeholder {
             color: var(--text-tertiary);
         }
-        
+
+        /* Fix autofill styles for dark mode */
+        .form-input:-webkit-autofill,
+        .form-input:-webkit-autofill:hover,
+        .form-input:-webkit-autofill:focus,
+        .form-input:-webkit-autofill:active {
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: var(--text-primary);
+            transition: background-color 5000s ease-in-out 0s;
+            box-shadow: inset 0 0 20px 20px var(--input-bg);
+        }
+
+        html.dark .form-input:-webkit-autofill,
+        html.dark .form-input:-webkit-autofill:hover,
+        html.dark .form-input:-webkit-autofill:focus,
+        html.dark .form-input:-webkit-autofill:active {
+            -webkit-text-fill-color: var(--text-primary);
+            box-shadow: inset 0 0 20px 20px var(--input-bg);
+        }
+
         .form-icon {
             position: absolute;
             left: 1rem;
