--- a/app/templates/brain_dump/index.html
+++ b/app/templates/brain_dump/index.html
@@ -161,7 +161,7 @@
                     <button class="toolbar-btn" onclick="insertCode()" title="Code">
                         <i class="ph ph-code"></i>
                     </button>
-                    <button class="toolbar-btn" onclick="insertLink()" title="Link">
+                    <button class="toolbar-btn" onclick="insertLink()" title="Link (Ctrl+K)">
                         <i class="ph ph-link"></i>
                     </button>
                 </div>
@@ -233,6 +233,16 @@
             </div>
         </div>
 
+        <div class="expiry-container" id="expiryContainer">
+            <div class="expiry-label">Link Expiry</div>
+            <div class="expiry-options">
+                <button class="expiry-option" onclick="selectExpiry(7)">7 days</button>
+                <button class="expiry-option active" onclick="selectExpiry(30)">30 days</button>
+                <button class="expiry-option" onclick="selectExpiry(90)">90 days</button>
+                <button class="expiry-option" onclick="selectExpiry(0)">Never</button>
+            </div>
+        </div>
+
         <div class="share-link-container" id="shareLinkContainer" style="display: none;">
             <div class="share-link-label">Share Link</div>
             <div class="share-link-input-group">
@@ -244,8 +254,7 @@
         </div>
 
         <div class="share-info">
-            <p id="shareStatus">Choose permission level and click "Create Share Link".</p>
-            <p style="margin-top: 0.5rem; font-size: 0.7rem;">Links expire after 30 days</p>
+            <p id="shareStatus">Choose your share settings:</p>
         </div>
 
         <div class="share-modal-actions">
